added new fields on TDE and medidas , moded tempplate

--- a/espumas/templates/espumas/medidas/detallemedidas.html
+++ b/espumas/templates/espumas/medidas/detallemedidas.html
@@ -31,14 +31,25 @@
                     <th>Ancho Frio Objetivo</th>
                     <th>Alto Frio Objetivo </th>
         
-                    
-                    <th>Flujo De Air Objetivo </th>
-        
                     <th>Largo Caliente Setting Predefinido  </th>
+                    <th>Largo Caliente Maximo  </th>
+                    <th>Largo Caliente Minimo  </th>
+                    <th>Largo Caliente Parametro Alto  </th>
+                    <th>Largo Caliente Parametro Bajo  </th>
+
                     <th>Ancho Caliente Setting Predefinido </th>
+                    <th>Ancho Caliente Maximo </th>
+                    <th>Ancho Caliente Minimo </th>
+                    <th>Ancho Caliente Parametro Alto </th>
+                    <th>Ancho Caliente Parametro Bajo </th>
+
                     <th>Alto Caliente Setting Predefinido </th>
-        
-                    <th> uso_objetivo </th>
+                    <th>Alto Caliente Maximo  </th>
+                    <th>Alto Caliente Minimo  </th>
+                    <th>Alto Caliente Parametro Alto </th>
+                    <th>Alto Caliente Parametro Bajo </th>
+                    
+                    <th>Uso objetivo </th>
                     <th>Medida Disponible </th>
                     
                     <th>Fecha_De_Creado </th>
@@ -61,11 +72,23 @@
                 <td>{{ itemsFront.ancho_frio_objetivo }}</td>
                 <td>{{ itemsFront.alto_frio_objetivo }}</td>
         
-                <td>{{ itemsFront.id }}</td>
-        
                 <td>{{ itemsFront.largo_caliente_setting_predefinido }}</td>
+                <td>{{ itemsFront.largo_caliente_maximo }}</td>
+                <td>{{ itemsFront.largo_caliente_minimo }}</td>
+                <td>{{ itemsFront.largo_caliente_parametro_alto }}</td>
+                <td>{{ itemsFront.largo_caliente_parametro_bajo }}</td>
+
                 <td>{{ itemsFront.ancho_caliente_setting_predefinido }}</td>
+                <td>{{ itemsFront.ancho_caliente_maximo }}</td>
+                <td>{{ itemsFront.ancho_caliente_minimo }}</td>
+                <td>{{ itemsFront.ancho_caliente_parametro_alto }}</td>
+                <td>{{ itemsFront.ancho_caliente_parametro_bajo }}</td>
+
                 <td>{{ itemsFront.alto_caliente_setting_predefinido }}</td>
+                <td>{{ itemsFront.alto_caliente_maximo }}</td>
+                <td>{{ itemsFront.alto_caliente_minimo }}</td>
+                <td>{{ itemsFront.alto_caliente_parametro_alto }}</td>
+                <td>{{ itemsFront.alto_caliente_parametro_bajo }}</td>
         
                 <td>{{ itemsFront.uso_objetivo }}</td>
                 <td>{{ itemsFront.medida_dispobible }}</td>
