--- a/corrida/templates/ordenes/produccion.html
+++ b/corrida/templates/ordenes/produccion.html
@@ -87,7 +87,7 @@
                                     <td><span class="badge badge-primary badge-pill">{{elementoCorrida.bloqueMedidas.largo_caliente_setting_predefinido}}</span></td>
             
                                     <td><span class="badge badge-primary badge-pill">{{elementoCorrida.bloqueMedidas.alto_caliente_setting_predefinido}}</span></td>
-                                    <td><span class="badge badge-primary badge-pill">{{elementoCorrida.bloqueMedidas.id}}</span></td>
+                                    <td><span class="badge badge-primary badge-pill">{{elementoCorrida.bloqueMedidas.tipo_de_espuma.flujo_de_aire_campo_alto}}</span></td>
                                     
                                     <td>{{ elemento.bloqueMedidas.uso_objetivo }}</td>
                                     
@@ -195,9 +195,7 @@
             <div class="row">
                 <div class="col-12 offset-0">
                     <p><b>Bloques Producidos de: <font color="green"> {{elementoCorrida.bloqueMedidas.tipo_de_espuma}}</font>
-                            {% with lote=bloquesProducidos.0.id %} 
-                    Numero de Lote: <font color="blue">{{lote}}</font> </p></b>
-                    {% endwith %}
+                    Numero de Lote: <font color="blue">{{elementoCorrida.lote.no_de_lote}}</font> </p></b>
                 </div>
             </div>
 
