added css text large

--- a/corrida/templates/ordenes/produccion.html
+++ b/corrida/templates/ordenes/produccion.html
@@ -99,7 +99,7 @@
                 <!--Columna de contador  -->
                 <div class="col-6 offset-0 ">
                     <b>Bloques Producidos: </b>
-                    <span class="badge badge-warning badge-pill">{{bloquesProducidosCount}}/{{elementoCorrida.cantidad}}</span>
+                    <span  class=" text-large badge badge-warning badge-pill">{{bloquesProducidosCount}}/{{elementoCorrida.cantidad}}</span>
                 </div> 
             </div>
             <br>
