added styles on lotes.html

--- a/corrida/templates/ordenes/dashboard_en_producion.html
+++ b/corrida/templates/ordenes/dashboard_en_producion.html
@@ -45,7 +45,7 @@
                         <td class="text-center" >{{ elementoCorrida.bloqueMedidas.descripcion }}</td>
                         <td class="text-center" >{{ elementoCorrida.bloqueMedidas.tipo_de_unidad }}</td>
                     
-                        <td class="text-center" >{{elementoCorrida.num_bloques}}{{ elementoCorrida.cantidad }}</td>
+                        <td class="text-center" >{{elementoCorrida.num_bloques}}/{{ elementoCorrida.cantidad }}</td>
                     
                     </tr>
                 
