Agrega area de curado a ordenes, corrige view

--- a/corrida/templates/ordenes/lotes.html
+++ b/corrida/templates/ordenes/lotes.html
@@ -38,7 +38,7 @@
                     <input type="text"  size="5" id="flujo_de_aire_astm_capturado" name="flujo_de_aire_astm_capturado" value="{{ lote.flujo_de_aire_astm_capturado }}">
                 </td>
                 <td class="text-center" >
-                    <input class="form-check-input" type="checkbox" name="pruebas_pasadas" checked id="pruebas_pasadas" value="{{lote.pruebas_pasadas}}">
+                    <input class="form-check-input" type="checkbox" name="pruebas_pasadas" id="pruebas_pasadas" value="{{lote.pruebas_pasadas}}">
                 </td>
                 <td class="text-center" >
                     <input type="submit" class="btn btn-success" role="button" value="Guardar Cambios">
