renamed to objetivos and added objetivos on espumas model

--- a/espumas/templates/espumas/tde/detalletde.html
+++ b/espumas/templates/espumas/tde/detalletde.html
@@ -74,13 +74,13 @@
         <td>{{ itemsFront.disponible }}</td>
 
         <td>{{ itemsFront.densidad_descripcion }}</td>
-        <td>{{ itemsFront.densidad_tipo }}</td>
+        <td>{{ itemsFront.densidad_objetivo }}</td>
         <td>{{ itemsFront.densidad_objetivo_maxima }}</td>
         <td>{{ itemsFront.densidad_objetivo_minima }}</td>
         <td>{{ itemsFront.densidad_objetivo_alta }}</td>
         <td>{{ itemsFront.densidad_objetivo_baja }}</td>
        
-        <td>{{ itemsFront.dureza_tipo }}</td>
+        <td>{{ itemsFront.dureza_objetivo }}</td>
         <td>{{ itemsFront.dureza_objetivo_maxima }}</td>
         <td>{{ itemsFront.dureza_objetivo_minima }}</td>
         <td>{{ itemsFront.dureza_objetivo_alta }}</td>
