agrega area de curado a corrida_producida

--- a/corrida/templates/ordenes/corrida_producida.html
+++ b/corrida/templates/ordenes/corrida_producida.html
@@ -16,6 +16,7 @@ Resumen de Orden </h2></b>
             <th class="text-center" scope="col">Metros Planeados</th>
             <th class="text-center" scope="col">Metros Producidos</th>
             <th class="text-center" scope="col">Peso Producido</th>
+            <th class="text-center" scope="col">Area de Curado</th>
           </tr>
         </thead>
         <tbody>
@@ -28,6 +29,7 @@ Resumen de Orden </h2></b>
             <td class="text-center">{{resumen.metros_planeados}}</td>
             <td class="text-center">{{resumen.metros_producidos}}</td>
             <td class="text-center">{{resumen.peso_producido}}</td>
+            <td class="text-center">{{corrida.area_de_curado}}</td>
           </tr>
 
 <table class="table table-striped table-sm">
