--- a/corrida/templates/ordenes/ordenes_pendientes.html
+++ b/corrida/templates/ordenes/ordenes_pendientes.html
@@ -44,7 +44,7 @@
                 <td></td>
                 <td></td>
                 <td>Area de curado estimada: </td>
-                <td>{{ corrida.area_de_curado_estimada }}</td>
+                <td>{{ corrida.area_de_curado_estimada }} m<sup>2</sup></td>
             </tr>
         </tbody>
     </table>
@@ -96,7 +96,7 @@
                 <td></td>
                 <td></td>
                 <td>Area de curado estimada: </td>
-                <td>{{ corrida.area_de_curado_estimada }}</td>
+                <td>{{ corrida.area_de_curado_estimada }} m<sup>2</sup></td>
             </tr>
         </tbody>
     </table>
