Add m2 to corrida_producida

--- a/corrida/templates/ordenes/corrida_producida.html
+++ b/corrida/templates/ordenes/corrida_producida.html
@@ -29,7 +29,7 @@ Resumen de Orden </h2></b>
             <td class="text-center">{{resumen.metros_planeados}}</td>
             <td class="text-center">{{resumen.metros_producidos}}</td>
             <td class="text-center">{{resumen.peso_producido}}</td>
-            <td class="text-center">{{corrida.area_de_curado}}</td>
+            <td class="text-center">{{corrida.area_de_curado}} m<sup>2</sup></td>
           </tr>
 
 <table class="table table-striped table-sm">
