--- a/espumas/templates/espumas/tde/agregartde.html
+++ b/espumas/templates/espumas/tde/agregartde.html
@@ -13,13 +13,26 @@
         <br>
         {% for field in form.informacion_general %}
             {% if forloop.first %}<div class="row">{% endif %}
-                <div class="form-group col">
-                    {{ field.label_tag }}
-                    {% render_field field class="form-control" %}
-                    {% if field.help_text %}
-                      <small class="form-text text-muted">{{ field.help_text }}</small>
-                    {% endif %}
-                  </div>
+              <div class="form-group col">
+                {{ field.label_tag }}
+                {% if form.is_bound %}
+                  {% if field.errors %}
+                    {% render_field field class="form-control is-invalid" %}
+                    {% for error in field.errors %}
+                      <div class="invalid-feedback">
+                        {{ error }}
+                      </div>
+                    {% endfor %}
+                  {% else %}
+                    {% render_field field class="form-control is-valid" %}
+                  {% endif %}
+                {% else %}
+                  {% render_field field class="form-control" %}
+                {% endif %}
+                {% if field.help_text %}
+                  <small class="form-text text-muted">{{ field.help_text }}</small>
+                {% endif %}
+              </div>
             {% if forloop.counter|divisibleby:5 %}</div><div class="row">{% endif %}
             {% if forloop.last %}</div>{% endif %}
         {% endfor %}
@@ -30,7 +43,20 @@
             {% if forloop.first %}<div class="row">{% endif %}
                 <div class="col form-group">
                     {{ field.label_tag }}
-                    {% render_field field class="form-control" %}
+                    {% if form.is_bound %}
+                      {% if field.errors %}
+                        {% render_field field class="form-control is-invalid" %}
+                        {% for error in field.errors %}
+                          <div class="invalid-feedback">
+                            {{ error }}
+                          </div>
+                        {% endfor %}
+                      {% else %}
+                        {% render_field field class="form-control is-valid" %}
+                      {% endif %}
+                    {% else %}
+                      {% render_field field class="form-control" %}
+                    {% endif %}
                     {% if field.help_text %}
                       <small class="form-text text-muted">{{ field.help_text }}</small>
                     {% endif %}
@@ -39,7 +65,7 @@
             {% if forloop.last %}</div>{% endif %}
         {% endfor %}
         <br>
-        <button class="btn btn-success" type="submit"> Guardar</button>
+        <button class="btn btn-success" type="submit" formnovalidate> Guardar</button>
         <a class="btn btn-primary" href="{% url 'espumas:tde' %}" role="button"> Regresar </a>
     </form>
     <br>
