change in url on index

--- a/espumas/templates/index.html
+++ b/espumas/templates/index.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-		
-
-
 
 <br>
 <br>
@@ -69,12 +66,12 @@
 													<p><a class="btn btn-primary" href="{% url 'corrida:inventario' %}" role="button">Capturar Cilindros  &raquo;</a></p>
 												</div>
 												<div class="col-md-4">
-													<h2>Producción de Bloque de espuma</h2>
-													<p> Para capturar los bloques de espuma entra aquí.</p>
-													<p><a class="btn btn-primary" href="#" role="button">Capturar Bloques &raquo;</a></p>
+													<h2> DashBoard</h2>
+													<p> Para ver el DashBoard de producion de espuma entra aquí.</p>
+													<p><a class="btn btn-primary" href="{% url 'corrida:dashboard' %}" role="button">Capturar Bloques &raquo;</a></p>
 												</div>
 												<div class="col-md-4">
-													<h2>Producción de Bloque Aglutinado </h2>
+													<h2> sss </h2>
 													<p> Para capturar los bloques de espuma aglutinada entra aquí.</p>
 													<p><a class="btn btn-primary" href="#" role="button"> Capturar Aglutinado &raquo;</a></p>
 												</div>
