Fix column title in espumas/tde

--- a/espumas/templates/espumas/tde/tde.html
+++ b/espumas/templates/espumas/tde/tde.html
@@ -25,7 +25,7 @@
     
                 <th>Editar</th>
                 <th>Borrar </th>
-                <th>Agregar a Corrida</th>
+                <th>Ver detalle</th>
     
               </tr>
             </thead>
@@ -48,7 +48,7 @@
                 <a class="btn btn-danger" href="{% url 'espumas:borrar_tde' item.id %}" role="button"> Borrar </a>
             </td>
             <td>
-                <a class="btn btn-primary" href="{% url 'espumas:detalle_tde' item.id %}" role="button"> Ver A Detalle </a>
+                <a class="btn btn-primary" href="{% url 'espumas:detalle_tde' item.id %}" role="button"> Ver detalle </a>
             </td>
     
     
